# sentinel-ai-assistant

./: .gitignore  README.md  SentinelAI.spec  SentinelAI.vbs  pyproject.toml  requirements.txt  sentinel_launcher.py
docs/: requirements.md
scripts/: run.ps1  setup_startup.py
src/agent_app/: __init__.py  cli.py  config.py  main.py  models.py  tray.py
src/agent_app/core/: brain.py  credentials.py  memory.py  orchestrator.py  pattern_tracker.py  retry_queue.py  session_manager.py  sync.py
src/agent_app/dashboard/: __init__.py  api.py
src/agent_app/dashboard/templates/: dashboard.html
src/agent_app/db/: repository.py
src/agent_app/gui/: chat_window.py
src/agent_app/integrations/: base.py  browser.py  git.py  github_issues.py  jira.py  workfiles.py
src/agent_app/monitors/: __init__.py  notifier.py  screen_reader.py  system_monitor.py
src/agent_app/voice/: listener.py  speaker.py
tests/integration/: test_api.py
tests/unit/: test_brain.py  test_git_adapter.py  test_memory.py  test_pattern_tracker.py  test_repository.py  test_screen_reader.py  test_system_monitor.py  test_voice.py
